[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.dependencies]
clap = {version = "4.5.20", features = ["cargo", "derive"]}
configparser = "3.0.2"
csv = "1.2.2"
anyhow = "1.0.90"
log = "0.4.22"
log4rs = "1.3.0"
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
serde_json = "1.0.133"
directories = "5.0.1"
actix = "0.13.5"
actix-rt = "2.10.0"
uuid = "1.11.0"
chrono = "0.4.39"
serde = "1.0.216"
actix-web = "4.9.0"
env_logger = "0.11.6"
inquire = "0.7.5"
tokio = "1.43.0"
futures = "0.3.31"
criterion = "0.5.1"
